--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,39 +1,410 @@
-/*
-Error: Invalid CSS after "...0b2167f39cdbaec": expected "{", was ""
-        on line 844 of stylesheets/style.scss
+@font-face {
+  font-family: 'Futura Light';
+  src: url("../fonts/Futura (Light).ttf"); }
+@font-face {
+  font-family: 'Harriet Regular';
+  src: url("../fonts/Harriet Display Regular.otf"); }
+@font-face {
+  font-family: 'Harriet Bold';
+  src: url("../fonts/Harriet Display Bold.otf"); }
+html, body, header, main {
+  overflow: hidden;
+  margin: 0 0 0 0;
+  box-sizing: border-box;
+  height: 100%; }
 
-839: 	// height: 100%;
-840: 	height: calc(100% - 100px);
-841: 	margin: 0 50px 0 50px;
-842: }
-843: >>>>>>> 9452366765e2f9b82f47bdb830b2167f39cdbaec
+h1, h2, h3, p, li, ul, ol {
+  margin: 0 0 0 0;
+  padding: 0 0 0 0; }
 
-Backtrace:
-stylesheets/style.scss:844
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1189:in `expected'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1125:in `expected'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1120:in `tok!'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:656:in `block'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:649:in `ruleset'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:675:in `block_child'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:668:in `block_contents'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:125:in `stylesheet'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:41:in `parse'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:406:in `_to_tree'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Users/joannecarr/.rvm/gems/ruby-2.3.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"...0b2167f39cdbaec\": expected \"{\", was \"\"\A         on line 844 of stylesheets/style.scss\A \A 839: 	// height: 100%;\A 840: 	height: calc(100% - 100px);\A 841: 	margin: 0 50px 0 50px;\A 842: }\A 843: >>>>>>> 9452366765e2f9b82f47bdb830b2167f39cdbaec"; }
+h1, h2, h3 {
+  font-family: "Harriet Bold"; }
+
+p {
+  font-family: "Futura Light"; }
+
+header, main {
+  position: fixed;
+  box-sizing: border-box; }
+
+main {
+  height: 100%;
+  min-height: 100%;
+  width: 100%;
+  padding-top: 100px;
+  padding-bottom: 100px; }
+
+header {
+  width: 100%;
+  height: 100px; }
+
+.background {
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat; }
+  @media only screen and (max-width: 64em) {
+    .background {
+      background-position: center; } }
+  .background--homepage {
+    background-image: url("../imgs/TAG-The-Agency-website-homepage-bg.png"); }
+  .background--production {
+    background-image: url("../imgs/TAG-The-Agency-website-production-bg.png"); }
+  .background--influencers {
+    background-image: url("../imgs/TAG-The-Agency-website-influencers-bg.png"); }
+  .background--strategy {
+    background-image: url("../imgs/TAG-The-Agency-website-thinking-strategy-bg.png"); }
+  .background--vr {
+    background-image: url("../imgs/TAG-The-Agency-website-VR-Studios-bg.png"); }
+
+.inner-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  clear: both; }
+  @media only screen and (min-width: 64em) and (max-width: 90em) {
+    .inner-container {
+      width: 960px;
+      height: 470px; } }
+  @media only screen and (min-width: 90em) {
+    .inner-container {
+      width: 1440px;
+      height: 720px; } }
+  .inner-container--strategy-page {
+    background-color: #FFF200; }
+
+.media {
+  display: inline-block;
+  height: calc(100% - 20px);
+  width: calc(60% - 20px);
+  margin: 10px 10px 10px 10px; }
+
+.copy {
+  clear: both;
+  float: left;
+  height: calc(80% - 20px);
+  width: calc(40% - 60px);
+  margin: 10px 50px 10px 10px; }
+  @media only screen and (min-width: 64em) and (max-width: 90em) {
+    .copy h1 {
+      font-size: 2.7em;
+      margin: 0 0 8% 0; }
+    .copy h2 {
+      margin: 8% 0 0 0; }
+    .copy p {
+      margin: 0 0 5% 0; } }
+  @media only screen and (min-width: 90em) {
+    .copy h1 {
+      font-size: 3em;
+      margin: 0 0 8% 0; }
+    .copy h2 {
+      font-size: 2em;
+      margin: 15% 0 0 0; }
+    .copy p {
+      font-size: 1.3em;
+      margin: 0 0 8% 0; } }
+  .copy--light {
+    color: white; }
+  @media only screen and (min-width: 64em) and (max-width: 90em) {
+    .copy--compact h1 {
+      font-size: 1.8em;
+      margin: 0 0 2% 0; }
+    .copy--compact h2 {
+      margin: 8% 0 0 0; }
+    .copy--compact p {
+      font-size: 0.9em;
+      margin: 0 0 2.5% 0; } }
+  @media only screen and (min-width: 90em) {
+    .copy--compact h1 {
+      font-size: 3em;
+      margin: 0 0 3% 0; }
+    .copy--compact h2 {
+      font-size: 2em;
+      margin: 15% 0 0 0; }
+    .copy--compact p {
+      font-size: 1.3em;
+      margin: 0 0 5% 0; } }
+
+.icons {
+  clear: both;
+  float: left;
+  width: calc(40% - 60px);
+  height: calc(20% - 10px);
+  margin: 0 50px 10px 10px; }
+  .icons__icon {
+    float: left;
+    width: 15%;
+    padding-bottom: 15%; }
+  .icons__image {
+    width: 100%;
+    padding-bottom: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    transition-duration: 1s; }
+    .icons__image--home {
+      background-image: url("../imgs/TAG The Agency website case studies buttons-56.png"); }
+      .icons__image--home:hover {
+        -ms-transform: rotate(180deg);
+        /* IE 9 */
+        -webkit-transform: rotate(180deg);
+        /* Chrome, Safari, Opera */
+        transform: rotate(180deg); }
+      .icons__image--home--light {
+        background-image: url("../imgs/home-icon-white.png"); }
+  .icons__text {
+    text-transform: uppercase;
+    font-family: 'Futura';
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    top: 100%;
+    margin: 10px 0 0 0; }
+  .icons--light {
+    color: white; }
+
+.nav-top {
+  text-transform: uppercase;
+  color: white;
+  height: 100%;
+  font-family: "Futura Light";
+  font-size: 1.4em;
+  white-space: nowrap; }
+  .nav-top__menu {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    margin: 0 20px 0 0;
+    height: 100%;
+    float: right;
+    text-align: center;
+    list-style-type: none; }
+    @media only screen and (max-width: 64em) {
+      .nav-top__menu {
+        width: 60%; } }
+    @media only screen and (min-width: 64em) and (max-width: 90em) {
+      .nav-top__menu {
+        width: 45%; } }
+    @media only screen and (min-width: 90em) {
+      .nav-top__menu {
+        width: 30%; } }
+  .nav-top__menu-item {
+    margin: auto 0 auto 0;
+    flex: 1; }
+  .nav-top__logo {
+    float: left;
+    margin: 0 0 0 20px;
+    width: 100px;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center; }
+    @media only screen and (max-width: 64em) {
+      .nav-top__logo {
+        width: 150px; } }
+    .nav-top__logo--dark {
+      background-image: url("../imgs/TAG_logo_tag_black_blacktag.png"); }
+    .nav-top__logo--light {
+      background-image: url("../imgs/TAG_white_1920x1080.png"); }
+  .nav-top--dark {
+    color: black; }
+
+.cmyk-crosses {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.3em;
+  position: relative;
+  width: 70%;
+  height: 150px;
+  text-align: center;
+  font-family: "Harriet Bold"; }
+  @media only screen and (min-width: 64em) and (max-width: 90em) {
+    .cmyk-crosses {
+      top: 100%; } }
+  @media only screen and (min-width: 90em) {
+    .cmyk-crosses {
+      top: 90%; } }
+  .cmyk-crosses__wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    margin: 0 auto 0 auto;
+    height: 100%;
+    width: 100%; }
+  .cmyk-crosses__item {
+    margin: 0 10px 0 10px;
+    flex: 1; }
+  .cmyk-crosses__image {
+    cursor: pointer;
+    transition-duration: 1.5s;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    padding-bottom: 100%; }
+  .cmyk-crosses__text {
+    margin: 10px 0 0 0; }
+  .cmyk-crosses__image--blue {
+    background-image: url("../imgs/cmyk-blue.png"); }
+  .cmyk-crosses__image--blue:hover {
+    background-image: url("../imgs/cmyk-blue-active.png"); }
+  .cmyk-crosses__text--blue {
+    color: #00AEEF; }
+  .cmyk-crosses__image--pink {
+    background-image: url("../imgs/cmyk-pink.png"); }
+  .cmyk-crosses__image--pink:hover {
+    background-image: url("../imgs/cmyk-pink-active.png"); }
+  .cmyk-crosses__text--pink {
+    color: #EC008C; }
+  .cmyk-crosses__image--yellow {
+    background-image: url("../imgs/cmyk-yellow.png"); }
+  .cmyk-crosses__image--yellow:hover {
+    background-image: url("../imgs/cmyk-yellow-active.png"); }
+  .cmyk-crosses__text--yellow {
+    color: #FFF200; }
+  .cmyk-crosses__image--white {
+    background-image: url("../imgs/cmyk-white.png"); }
+  .cmyk-crosses__image--white:hover {
+    background-image: url("../imgs/cmyk-white-active.png"); }
+  .cmyk-crosses__text--white {
+    color: white; }
+  .cmyk-crosses__image--black {
+    background-image: url("../imgs/cmyk-black.png"); }
+  .cmyk-crosses__image--black:hover {
+    background-image: url("../imgs/cmyk-black-active.png"); }
+  .cmyk-crosses__text--black {
+    color: #231F20; }
+
+.float-right {
+  float: right;
+  height: 100%; }
+  @media only screen and (min-width: 64em) and (max-width: 90em) {
+    .float-right {
+      width: 760px; } }
+  @media only screen and (min-width: 90em) {
+    .float-right {
+      width: 1250px; } }
+
+.work-examples {
+  color: white;
+  float: left;
+  height: 100%;
+  width: 100%; }
+  .work-examples__row-1, .work-examples__row-2 {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    height: 50%;
+    width: 100%; }
+  .work-examples__item {
+    background-color: #3A3A3C;
+    flex: 1; }
+    @media only screen and (min-width: 64em) and (max-width: 90em) {
+      .work-examples__item {
+        margin: 5px 5px 5px 5px; } }
+    @media only screen and (min-width: 90em) {
+      .work-examples__item {
+        margin: 10px 10px 10px 10px; } }
+  .work-examples__category {
+    font: 1em "Futura Light";
+    position: absolute;
+    margin: 10px 0 0 5px; }
+  .work-examples__title {
+    font: 1.2em "Harriet Bold";
+    position: absolute;
+    margin: 30px 0 0 5px; }
+  .work-examples__video {
+    width: 100%;
+    height: 75%; }
+  .work-examples__description {
+    position: relative;
+    width: 100%;
+    background-color: #58585A;
+    height: 25%;
+    bottom: 0%; }
+    @media only screen and (min-width: 64em) and (max-width: 90em) {
+      .work-examples__description {
+        font-size: 0.7em; } }
+    @media only screen and (min-width: 90em) {
+      .work-examples__description {
+        font-size: 1.1em; } }
+    .work-examples__description p {
+      padding: 3px 10px 5px 10px; }
+  .work-examples__color-strip {
+    float: left;
+    position: relative;
+    bottom: 0%;
+    height: 2%;
+    width: 100%;
+    background-color: #00AEEF; }
+    .work-examples__color-strip:after {
+      content: "";
+      width: 50%;
+      float: right;
+      height: 100%;
+      background-color: #FFF200; }
+    .work-examples__color-strip--full-pink {
+      background-color: #EC008C; }
+      .work-examples__color-strip--full-pink:after {
+        background-color: #EC008C; }
+    .work-examples__color-strip--half-pink {
+      background-color: #EC008C; }
+
+.videos {
+  float: left;
+  width: 100%;
+  height: 100%; }
+  .videos__video {
+    position: relative;
+    float: left;
+    background-color: rgba(0, 0, 0, 0.5); }
+    .videos__video--full-width {
+      margin: 0 5px 10px 5px;
+      width: calc(100% - 10px);
+      height: calc(65% - 10px); }
+    .videos__video--half-width {
+      width: calc(50% - 10px);
+      margin: 0px 5px 0 5px;
+      height: 35%; }
+    .videos__video:after {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: inline-block;
+      content: "";
+      width: 15%;
+      padding-bottom: 15%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-image: url("../imgs/play-icon.png"); }
+
+.influencer-list {
+  margin: 0 0 0 20%;
+  color: white;
+  height: 100%;
+  width: 40%; }
+  .influencer-list h3 {
+    font-size: 1.3em;
+    font-family: "Futura Light";
+    margin: 10px 0 30px 0; }
+  .influencer-list ul {
+    font-family: "Futura Light";
+    list-style-type: none; }
+  .influencer-list li {
+    font-size: 1.2em;
+    margin: 5px 0 5px 0; }
+
+.thinking-background {
+  z-index: -1;
+  position: absolute;
+  background-color: #FFF200;
+  width: calc(100% - 100px);
+  height: calc(100% - 100px);
+  margin: 0 50px 0 50px; }
+
+/*# sourceMappingURL=style.css.map */
