--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -47,7 +47,7 @@ header {
   background-repeat: no-repeat; }
   @media only screen and (max-width: 64em) {
     .background {
-      background-position: center; } }
+      background-position: 60% 0; } }
   .background--homepage {
     background-image: url("../imgs/TAG-The-Agency-website-homepage-bg.png"); }
   .background--production {
@@ -65,6 +65,10 @@ header {
   left: 50%;
   transform: translate(-50%, -50%);
   clear: both; }
+  @media only screen and (max-width: 64em) {
+    .inner-container {
+      width: 950px;
+      height: 1250px; } }
   @media only screen and (min-width: 64em) and (max-width: 90em) {
     .inner-container {
       width: 960px;
@@ -183,6 +187,7 @@ header {
     list-style-type: none; }
     @media only screen and (max-width: 64em) {
       .nav-top__menu {
+        display: none;
         width: 60%; } }
     @media only screen and (min-width: 64em) and (max-width: 90em) {
       .nav-top__menu {
@@ -208,6 +213,66 @@ header {
       background-image: url("../imgs/TAG_logo_tag_black_blacktag.png"); }
     .nav-top__logo--light {
       background-image: url("../imgs/TAG_white_1920x1080.png"); }
+  .nav-top__burger-icon {
+    width: 100px;
+    height: 100px;
+    float: right;
+    margin: 10px 10px 0 0;
+    position: relative;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer; }
+    .nav-top__burger-icon span {
+      display: block;
+      position: absolute;
+      height: 10px;
+      width: 100%;
+      background: white;
+      border-radius: 10px;
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transition: .25s ease-in-out;
+      -moz-transition: .25s ease-in-out;
+      -o-transition: .25s ease-in-out;
+      transition: .25s ease-in-out; }
+    .nav-top__burger-icon span:nth-child(1) {
+      top: 10px; }
+    .nav-top__burger-icon span:nth-child(2), .nav-top__burger-icon span:nth-child(3) {
+      top: calc(50% - 10px); }
+    .nav-top__burger-icon span:nth-child(4) {
+      top: calc(100% - 30px); }
+    .nav-top__burger-icon--open span:nth-child(1) {
+      top: 10px;
+      width: 0%;
+      left: 50%; }
+    .nav-top__burger-icon--open span:nth-child(2) {
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -o-transform: rotate(45deg);
+      transform: rotate(45deg); }
+    .nav-top__burger-icon--open span:nth-child(3) {
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      transform: rotate(-45deg); }
+    .nav-top__burger-icon--open span:nth-child(4) {
+      top: 10px;
+      width: 0%;
+      left: 50%; }
+    @media only screen and (min-width: 64em) and (max-width: 90em) {
+      .nav-top__burger-icon {
+        display: none; } }
+    @media only screen and (min-width: 90em) {
+      .nav-top__burger-icon {
+        display: none; } }
   .nav-top--dark {
     color: black; }
 
@@ -221,10 +286,11 @@ header {
   width: 70%;
   height: 150px;
   text-align: center;
-  font-family: "Harriet Bold"; }
-  @media only screen and (min-width: 64em) and (max-width: 90em) {
+  font-family: "Harriet Bold";
+  top: 100%; }
+  @media only screen and (max-width: 64em) {
     .cmyk-crosses {
-      top: 100%; } }
+      width: 100%; } }
   @media only screen and (min-width: 90em) {
     .cmyk-crosses {
       top: 90%; } }
