--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -119,7 +119,7 @@ header {
 
 .background {
 	@include respond-to(handhelds) {
-		background-position: center;
+		background-position: 60% 0;
 	}
 	z-index: -1;
 	position: absolute;
@@ -148,6 +148,8 @@ header {
 	@include center;
 	clear: both;
 	@include respond-to(handhelds) {
+		width: 950px;
+		height: 1250px;
 	}
 	@include respond-to(medium-screens) {
 		width: 960px;
@@ -307,6 +309,7 @@ header {
 		text-align: center;
 		list-style-type: none;
 		@include respond-to(handhelds) {
+			display: none;
 			width: 60%;
 		}
 		@include respond-to(medium-screens) {
@@ -338,6 +341,79 @@ header {
 			background-image: url($img-path + $logo-light);
 		}
 	}
+	&__burger-icon {
+		width: 100px;
+		height: 100px;
+		float: right;
+		margin: 10px 10px 0 0;
+		position: relative;
+		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-o-transform: rotate(0deg);
+		transform: rotate(0deg);
+		-webkit-transition: .5s ease-in-out;
+		-moz-transition: .5s ease-in-out;
+		-o-transition: .5s ease-in-out;
+		transition: .5s ease-in-out;
+		cursor: pointer;
+		span {
+			display: block;
+			position: absolute;
+			height: 10px;
+			width: 100%;
+			background: white;
+			border-radius: 10px;
+			-webkit-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-o-transform: rotate(0deg);
+			transform: rotate(0deg);
+			-webkit-transition: .25s ease-in-out;
+			-moz-transition: .25s ease-in-out;
+			-o-transition: .25s ease-in-out;
+			transition: .25s ease-in-out;
+		}
+		span:nth-child(1) {
+			top: 10px;
+		}
+		span:nth-child(2), span:nth-child(3) {
+			top: calc(50% - 10px);
+		}
+		span:nth-child(4) {
+			top: calc(100% - 30px);
+		}
+		&--open {
+			span:nth-child(1) {
+				top: 10px;
+				width: 0%;
+				left: 50%;
+			}
+			span:nth-child(2) {
+				-webkit-transform: rotate(45deg);
+				-moz-transform: rotate(45deg);
+				-o-transform: rotate(45deg);
+				transform: rotate(45deg);
+			}
+			span:nth-child(3) {
+				-webkit-transform: rotate(-45deg);
+				-moz-transform: rotate(-45deg);
+				-o-transform: rotate(-45deg);
+				transform: rotate(-45deg);
+			}
+			span:nth-child(4) {
+				top: 10px;
+				width: 0%;
+				left: 50%;
+			}
+		}
+		@include respond-to(handhelds) {
+		}
+		@include respond-to(medium-screens) {
+			display: none;
+		}
+		@include respond-to(wide-screens) {
+			display: none;
+		}
+	}
 	&--dark {
 		color: black;
 	}
@@ -351,10 +427,11 @@ header {
 	height: 150px;
 	text-align: center;
 	font-family: $header-font;
+	top: 100%;
 	@include respond-to(handhelds) {
+		width: 100%;
 	}
 	@include respond-to(medium-screens) {
-		top: 100%;
 	}
 	@include respond-to(wide-screens) {
 		top: 90%;
