--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -35,6 +35,7 @@ main {
   padding-bottom: 100px; }
 
 header {
+  z-index: 2;
   width: 100%;
   height: 100px; }
 
@@ -249,24 +250,20 @@ header {
       top: calc(50% - 10px); }
     .nav-top__burger-icon span:nth-child(4) {
       top: calc(100% - 30px); }
-    .nav-top__burger-icon--open span:nth-child(1) {
-      top: 10px;
-      width: 0%;
-      left: 50%; }
-    .nav-top__burger-icon--open span:nth-child(2) {
+    .nav-top__burger-icon:hover span:nth-child(1) {
+      opacity: 0; }
+    .nav-top__burger-icon:hover span:nth-child(2) {
       -webkit-transform: rotate(45deg);
       -moz-transform: rotate(45deg);
       -o-transform: rotate(45deg);
       transform: rotate(45deg); }
-    .nav-top__burger-icon--open span:nth-child(3) {
+    .nav-top__burger-icon:hover span:nth-child(3) {
       -webkit-transform: rotate(-45deg);
       -moz-transform: rotate(-45deg);
       -o-transform: rotate(-45deg);
       transform: rotate(-45deg); }
-    .nav-top__burger-icon--open span:nth-child(4) {
-      top: 10px;
-      width: 0%;
-      left: 50%; }
+    .nav-top__burger-icon:hover span:nth-child(4) {
+      opacity: 0; }
     @media only screen and (min-width: 64em) and (max-width: 90em) {
       .nav-top__burger-icon {
         display: none; } }
