--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -112,9 +112,10 @@ main {
 	padding-bottom: 100px;
 }
 
-header { 
-  width: 100%;
-  height: 100px;
+header {
+	z-index: 2;
+ 	width: 100%;
+ 	height: 100px;
 }
 
 .background {
@@ -381,11 +382,12 @@ header {
 		span:nth-child(4) {
 			top: calc(100% - 30px);
 		}
-		&--open {
+		&:hover {
 			span:nth-child(1) {
-				top: 10px;
-				width: 0%;
-				left: 50%;
+				opacity: 0;
+				// top: 10px;
+				// width: 0%;
+				// left: 50%;
 			}
 			span:nth-child(2) {
 				-webkit-transform: rotate(45deg);
@@ -400,9 +402,10 @@ header {
 				transform: rotate(-45deg);
 			}
 			span:nth-child(4) {
-				top: 10px;
-				width: 0%;
-				left: 50%;
+				opacity: 0;
+				// top: 10px;
+				// width: 0%;
+				// left: 50%;
 			}
 		}
 		@include respond-to(handhelds) {
