add angular routing to all pages

--- a/pages/partials/home.html
+++ b/pages/partials/home.html
@@ -1,4 +1,4 @@
-<div class="background background--home"></div>
+<div class="background background--homepage"></div>
 <header>
 	<div class="nav-top nav-top">
 		<ul class="nav-top__menu">
