--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -61,6 +61,7 @@ header {
     background-image: url("../imgs/TAG-The-Agency-website-VR-Studios-bg.png"); }
 
 .inner-container {
+  transition-duration: 0.5s;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -68,8 +69,8 @@ header {
   clear: both; }
   @media only screen and (max-width: 64em) {
     .inner-container {
-      width: 950px;
-      height: 1250px; } }
+      width: 100%;
+      height: 100%; } }
   @media only screen and (min-width: 64em) and (max-width: 90em) {
     .inner-container {
       width: 960px;
@@ -178,6 +179,7 @@ header {
   font-size: 1.4em;
   white-space: nowrap; }
   .nav-top__menu {
+    transition-duration: 0.5s;
     display: flex;
     flex-wrap: nowrap;
     align-items: stretch;
@@ -287,7 +289,8 @@ header {
   top: 100%; }
   @media only screen and (max-width: 64em) {
     .cmyk-crosses {
-      width: 100%; } }
+      width: 100%;
+      top: 75%; } }
   @media only screen and (min-width: 90em) {
     .cmyk-crosses {
       top: 90%; } }
@@ -303,7 +306,6 @@ header {
     flex: 1; }
   .cmyk-crosses__image {
     cursor: pointer;
-    transition-duration: 1.5s;
     background-position: center;
     background-size: cover;
     width: 100%;
