--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -146,11 +146,15 @@ header {
 }
 
 .inner-container {
+	transition-duration: 0.5s;
+	// transition-duration: 0.5s;
 	@include center;
 	clear: both;
 	@include respond-to(handhelds) {
-		width: 950px;
-		height: 1250px;
+		// width: 950px;
+		// height: 1250px;
+		width: 100%;
+		height: 100%;
 	}
 	@include respond-to(medium-screens) {
 		width: 960px;
@@ -303,6 +307,7 @@ header {
 	font-size: 1.4em;
 	white-space: nowrap;
 	&__menu {
+		transition-duration: 0.5s;
 		@include flex-wrapper;
 		margin: 0 20px 0 0;
 		height: 100%;
@@ -385,9 +390,6 @@ header {
 		&:hover {
 			span:nth-child(1) {
 				opacity: 0;
-				// top: 10px;
-				// width: 0%;
-				// left: 50%;
 			}
 			span:nth-child(2) {
 				-webkit-transform: rotate(45deg);
@@ -403,9 +405,6 @@ header {
 			}
 			span:nth-child(4) {
 				opacity: 0;
-				// top: 10px;
-				// width: 0%;
-				// left: 50%;
 			}
 		}
 		@include respond-to(handhelds) {
@@ -433,6 +432,7 @@ header {
 	top: 100%;
 	@include respond-to(handhelds) {
 		width: 100%;
+		top: 75%;
 	}
 	@include respond-to(medium-screens) {
 	}
@@ -451,7 +451,7 @@ header {
 	}
 	&__image {
 		cursor: pointer;
-		transition-duration: 1.5s;
+		// transition-duration: 1.5s;
 		background-position: center;
 		background-size: cover;
 		width: 100%;
