--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -40,6 +40,10 @@ header {
   height: 100px; }
 
 .background {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: -1;
   position: absolute;
   height: 100%;
