add navigation between pages with gi function

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -155,6 +155,7 @@ header {
     background-repeat: no-repeat;
     transition-duration: 1s; }
     .icons__image--home {
+      cursor: pointer;
       background-image: url("../imgs/TAG The Agency website case studies buttons-56.png"); }
       .icons__image--home:hover {
         -ms-transform: rotate(180deg);
