--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -69,6 +69,12 @@ $xlarge-breakpoint: em(1920) !default;
 	transform: translate(-50%, -50%);
 }
 
+@mixin center-horizontal {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
 //Copy / Paste for responsive styles
 
 // @include respond-to(handhelds) {
@@ -148,13 +154,14 @@ header {
 
 .inner-container {
 	transition-duration: 0.5s;
-	@include center;
+	@include center-horizontal;
+	position: relative;
 	clear: both;
 	@include respond-to(handhelds) {
-		// width: 950px;
-		// height: 1250px;
+		box-sizing: border-box;
+		height: calc(100% - 100px); //header height
 		width: 100%;
-		height: 100%;
+		padding: 50px 10px 10px 10px;
 	}
 	@include respond-to(medium-screens) {
 		width: 960px;
@@ -164,28 +171,46 @@ header {
 		width: 1440px;
 		height: 720px;
 	}
-	&--strategy-page {
-		background-color: $yellow;
-	}
 }
 
 .media {
+	position: relative;
 	display: inline-block;
 	height: calc(100% - 20px);
 	width: calc(60% - 20px);
 	margin: 10px 10px 10px 10px;
+	@include respond-to(handhelds) {
+		@include center-horizontal;
+		position: relative;
+		box-sizing: border-box;
+		width: 100%;
+		height: 50%;
+		margin: 0 0 0 0;
+	}
 }
 
 .copy {
 	clear: both;
 	float: left;
-	height: calc(80% - 20px); // Minus margins
-	width: calc(40% - 60px); // Minus margins
-	margin: 10px 50px 10px 10px;
 	@include respond-to(handhelds) {
-		// To Add mobile styles when Rosa completes them
+		width: 100%;
+		height: 35%;
+		h1 {
+			font-size: 2.8em;
+			margin: 0 0 2% 0;
+		}
+		h2 {
+			margin: 2% 0 0 0;
+		}
+		p {
+			font-size: 2.2em;
+			margin: 0 0 2% 0;
+		}
 	}
 	@include respond-to(medium-screens) {
+		height: calc(80% - 20px); // Minus margins
+		width: calc(40% - 60px); // Minus margins
+		margin: 10px 50px 10px 10px;
 		h1 {
 			font-size: 2.7em;
 			margin: 0 0 8% 0;
@@ -198,6 +223,9 @@ header {
 		}
 	}
 	@include respond-to(wide-screens) {
+		height: calc(80% - 20px); // Minus margins
+		width: calc(40% - 60px); // Minus margins
+		margin: 10px 50px 10px 10px;
 		h1 {
 			font-size: 3em;
 			margin: 0 0 8% 0;
@@ -215,8 +243,19 @@ header {
 		color: white;
 	}
 	&--compact {
+		overflow: scroll;
 		@include respond-to(handhelds) {
-			// To Add mobile styles when Rosa completes them
+			h1 {
+				font-size: 1.8em;
+				margin: 0 0 2% 0;
+			}
+			h2 {
+				margin: 2% 0 0 0;
+			}
+			p {
+				font-size: 0.7em;
+				margin: 0 0 1% 0;
+			}
 		}
 		@include respond-to(medium-screens) {
 			h1 {
@@ -255,16 +294,18 @@ header {
 	height: calc(20% - 10px); // Minus margins
 	margin: 0 50px 10px 10px;
 	@include respond-to(handhelds) {
-		// To Add mobile styles when Rosa completes them
-	}
-	@include respond-to(medium-screens) {
-	}
-	@include respond-to(wide-screens) {
+		@include flex-wrapper;
+		@include center-horizontal;
+		width: 60%;
 	}
 	&__icon {
 		float: left;
 		width: 15%;
 		padding-bottom: 15%;
+		@include respond-to(handhelds) {
+			margin: auto 0 auto 0;
+			flex: 1;
+		}
 	}
 	&__image {
 		width: 100%;
@@ -474,22 +515,6 @@ header {
 	}
 }
 
-.float-right {
-	float: right;
-	height: 100%;
-	@include respond-to(handhelds) {
-		// To Add mobile styles when Rosa completes them
-	}
-	@include respond-to(medium-screens) {
-		// width: 60%;
-		width: 760px;
-	}
-	@include respond-to(wide-screens) {
-		// width: 65%;
-		width: 1250px;
-	}
-}
-
 .work-examples {
 	color: white;
 	float: left;
@@ -585,11 +610,17 @@ header {
 			margin: 0 5px 10px 5px;
 			width: calc(100% - 10px);
 			height: calc(65% - 10px);
+			@include respond-to(handhelds) {
+				height: 100%;
+			}
 		}
 		&--half-width {
 			width: calc(50% - 10px);
 			margin: 0px 5px 0 5px;
 			height: 35%;
+			@include respond-to(handhelds) {
+				display: none;
+			}
 		}
 		&:after {
 			@include center;
