--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -292,10 +292,10 @@ header {
 
 .icons {
 	position: relative;
-	top: calc(-20% - 10px); // Quick fix
+	// top: calc(-20% - 10px); // Quick fix
 	left: 0;
 	clear: both;
-	// float: left;
+	float: left;
 	width: calc(40% - 60px); // Minus margins
 	height: calc(20% - 10px); // Minus margins
 	margin: 0 50px 10px 10px;
@@ -303,6 +303,10 @@ header {
 		@include flex-wrapper;
 		@include center-horizontal;
 		width: 60%;
+	}
+	@include respond-to(medium-screens) {
+		float: none;
+		top: calc(-20% - 10px); // Quick fix
 	}
 	&__icon {
 		float: left;
