--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -494,19 +494,9 @@ header {
       @media only screen and (max-width: 64em) and (orientation: portrait) {
         .videos__video--half-width {
           display: none; } }
-    .videos__video:after {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      display: inline-block;
-      content: "";
-      width: 15%;
-      padding-bottom: 15%;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-image: url("../imgs/play-icon.png"); }
+  .videos_iframe {
+    width: 100%;
+    height: 100%; }
 
 .influencer-list {
   margin: 0 0 0 20%;
